# poe1-suite

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/server/: README.md  pyproject.toml
apps/server/src/poe1_server/: __init__.py  main.py
apps/server/tests/: test_builds_router.py  test_fob_router.py  test_pricing_router.py
apps/shell/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/shell/src/: App.tsx  index.css  main.tsx  theme.ts
apps/shell/src/api/: builds.ts  fob.ts  types.ts
apps/shell/src/components/: BuildCard.tsx  DonationModal.tsx  IntentCard.tsx  ScoreBar.tsx  StageCard.tsx  TradeSearchDialog.tsx
apps/shell/src/pages/: AnalyzePage.tsx  FinderPage.tsx  HomePage.tsx  PlannerPage.tsx  WelcomePage.tsx
apps/shell/src/state/: welcome.ts
docs/: FOB_MANUALE.md  architecture.md
pytest-cache-files-_gdwdbvt/v/cache/: nodeids
