[project]
name = "poe1-suite"
version = "0.1.0"
description = "A mono-repo of Path of Exile 1 tools: FOB (build advisor), Faustus flipper, hideout manager, and more."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Riccardo Longobardi", email = "ric.longobardi@outlook.it" }]

dependencies = [
    "poe1-core",
    "poe1-shared",
    "poe1-pricing",
    "poe1-builds",
    "poe1-fob",
    "poe1-server",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/shell", "packages/__pycache__"]

[tool.uv.sources]
poe1-core = { workspace = true }
poe1-shared = { workspace = true }
poe1-pricing = { workspace = true }
poe1-builds = { workspace = true }
poe1-fob = { workspace = true }
poe1-server = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-requests>=2.32",
    "types-protobuf>=5.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/generated/**"]
src = [
    "packages/core/src",
    "packages/shared/src",
    "packages/pricing/src",
    "packages/builds/src",
    "packages/fob/src",
    "apps/server/src",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "SIM",
    "C4",
    "UP",
    "ANN",
    "Q",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ANN"]
"**/__init__.py" = ["F401"]
"**/generated/**/*.py" = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "packages/core/src:packages/shared/src:packages/pricing/src:packages/builds/src:packages/fob/src:apps/server/src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "diskcache"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "poe1_builds.generated.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "packages/core/tests",
    "packages/shared/tests",
    "packages/pricing/tests",
    "packages/builds/tests",
    "packages/fob/tests",
    "apps/server/tests",
]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic._internal.*",
]

[tool.coverage.run]
branch = true
source = [
    "packages/core/src",
    "packages/shared/src",
    "packages/pricing/src",
    "packages/builds/src",
    "packages/fob/src",
    "apps/server/src",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
]
