[project]
name = "poe1-server"
version = "0.1.0"
description = "FastAPI entrypoint that composes every tool's router into a single API."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../../LICENSE" }
authors = [{ name = "Riccardo Longobardi", email = "ric.longobardi@outlook.it" }]

dependencies = [
    "poe1-core",
    "poe1-shared",
    "poe1-fob",
    "poe1-pricing",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
poe1-server = "poe1_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poe1_server"]
